Route Planner Dark Theme Update
 Yeni Özellikler:
- Route Planner orta alanı için modern dark theme tasarımı
- GameTracker renk paletine uyumlu mavi/mor tonları
- Cycle kartları için glassmorphism efektleri
- Yakında Gelecek kartı ile gelecek özellikler için placeholder

 Cycle Kartları:
- Kartlar ile dış kutu arasına boşluk eklendi
- GameTracker'ın renk paletine uygun gradient'ler
- Hover animasyonları ve glow efektleri
- Aktif/sonraki cycle için farklı görsel durumlar

 Progress Bar'lar:
- Mor gradient fill ile modern görünüm
- Shimmer animasyon efektleri
- Glassmorphism ve glow efektleri

 Responsive Design:
- Tüm değişiklikler responsive tasarıma uygun
- Accessibility dostu renk kontrastları
- Modern animasyon geçişleri

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "css:validate": "node css-variable-validator.cjs",
+    "css:fix": "node css-variable-validator.cjs && echo '🔧 CSS sorunları tespit edildi. Manuel düzeltme gerekli.'"
   },
   "dependencies": {
     "react": "^19.1.1",
