--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ VITE_ENABLE_ANALYTICS=false
 VITE_ENABLE_DEBUG=false
 VITE_STORAGE_PREFIX="vault-tracker"
 VITE_BUILD_TARGET="production"
+
+# RAWG API Settings
+VITE_RAWG_API_KEY="2bf2ce37dafb4fbea8fc82e308badac7"
